static/css/theme-mine.css
/* ... */
#body .nav {
    position: inherit;
    top: inherit;
    bottom: inherit;
    width: inherit;
    font-size: inherit;
    height: inherit;
    cursor: pointer;
    display: inherit;
    text-align: inherit;
}
#body .nav > i {
    display: inherit;
    vertical-align: inherit;
    text-align: inherit;
}

@media only all and (max-width: 59.938em) {
    #body .nav {
        display: inherit;
        position: inherit
        top: inherit;
        width: inherit;
        text-align: inherit;
        height: inherit;
        line-height: inherit;
        padding-top: inherit;
    }
    #body .nav > i {
        display: inherit;
    }
}

img.logo {
    position: fixed;
    top: 20px;
    left: 25px;
    height: 180px;
}

body.dark img.logo.light {
    display: none;
}

body.light img.logo.light {
    display: inherit;
}

body.light img.logo.dark {
    display: none;
}

body.dark img.logo.dark {
    display: inherit;
}


table tr th {
    padding-right: 20px;
}

.search_frame {
    width: 100%;
    height: 100vh;
}

.category-icon {
    margin-left: 5px;
    margin-right: 5px;
}

